   Druckvorlagen für eine Weiche für die Anrede verwendet werden kann.
 - eigene Tabellen für Anrede von Kunden/Lieferanten und Titel und Abteilung
   von Ansprechpersonen. Auswahl in Mandantenkonfiguration, ob in den Stammdaten
   nur eine Auswahlliste angezeigt werden soll, oder wie bisher Freitext-Feld
   und Auswahlliste. Anrede, Titel und Abteilung können im System-Menü bearbeitet
   werden.

Administrative Änderungen

  - Die zwei Perl-Module "CAM::PDF" und "XML::LibXML" werden nun benötigt.

2019-12-11 - Release 3.5.5

Mittelgroße neue Features:

- In den Benutzereinstellungen kann ausgewählt werden, ob der Part-Picker in
  der neuen Angebots-/Auftragsmaske (neuer Auftrags-Controller) auch nach
  Kunden-Artikelnummern (Verkauf) und Lieferanten-Artikelnummern (Einkauf)
  suchen soll. Ist dieses Feature eingeschaltet, so werden auch die Kunden-
  bzw. Lieferanten-Artikelnummern als Spalte in den Positionen angezeigt.

- Part Controller - neuer Tab mit Lagerinformationen - was ist wo gelagert

- Neuer Workflow Lieferantenauftrag->Kreditorenbuchung: Für jedes Aufwandskonto
  der Positionen im Lieferantenauftrag wird eine Zeile in der Kreditorenbuchung
  erstellt. Gebucht wird standardmäßig auf das entsprechende Aufwandskonto. In
  der Mandantenkonfiguration kann unter Standardkonten ein Konto ausgewählt
  werden, auf das dann alle Zeilen gebucht werden.
  Die Steuern werden übernommen, sofern diese für das ausgewählte Aufwandskonto
  gültig sind. Ansonsten wird die Default-Steuer für das Aufwandskonto gesetzt.
  Der Quellauftrag wird geschlossen, wenn der Betrag aller Kreditorenbuchungen,
  die aus Workflows aus dem Quellauftrag entstanden sind, gleich dem Betrag
  des Quellauftrags ist.

- Der Jahresabschluß wurde komplett überarbeitet, es wird nun zwischen
  Bestands- und Erfolgskonten unterschieden und ein Gewinn- bzw. Verlustvortrag
  übertragen.

Kleinere neue Features und Detailverbesserungen:

- Mahnungen nach Abteilung filtern
